# osc-client

./: .gitignore  404.html  Dockerfile  README.md  Taskfile.yaml  index.html  mkdocs.yaml  osc_sequences.sh  pyproject.toml
.github/workflows/: docs.yaml
c4/components/workflow/publish_experiment_products/: index.html
c4/components/workflow/publish_workflow/: index.html
cli/: index.html
cwl-workflows/: .env  git_repository.cwl  publish_experiment_products.cwl  publish_workflow.cwl
docs/: cli.md  index.md
docs/c4/components/workflow/: publish_experiment_products.md  publish_workflow.md
schemas/: osc_ogcapi_records_models.yaml
search/: search_index.json
src/osc_client/: __init__.py  cli.py  experiment.py  models.py  product.py  workflow.py
tests/: conftest.py  test_about_models_osc_extension.py  test_cli.py  test_init_workflow_experiment_product.py  test_themes_extension.py
