[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osc-client"
dynamic = ["version"]
description = 'Open Science Catalog client'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Simone Tripodi", email = "simone.tripodi@terradue.com" },
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click==8.3.1",
  "loguru==0.7.3",
  "ogc-api-processes-client @ git+https://github.com/EOEPCA/ogc-api-processes-client.git@refactoring",
  "pydantic==2.12.5",
  "session-adapters==0.2.0",
  "transpiler-mate==0.37.0",
  "pystac==1.14.3"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Terradue/osc-client#readme"
Issues = "https://github.com/Terradue/osc-client/issues"
Source = "https://github.com/Terradue/osc-client"

[project.scripts]
osc-client = "osc_client.cli:main"

[tool.hatch.version]
path = "src/osc_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/osc_client tests}"

[tool.coverage.run]
source_pkgs = ["osc_client", "tests"]
branch = true
parallel = true
omit = [
  "src/osc_client/__about__.py",
]

[tool.coverage.paths]
osc_client = ["src/osc_client", "*/osc-client/src/osc_client"]
tests = ["tests", "*/osc-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
description = "Test environment"
dependencies = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-q = "pytest -q"
test-cov = "pytest --cov=opensearch_gateway"
test-show-setup = "pytest --setup-show"

[tool.hatch.envs.dev]
description = "Development environment"
dependencies = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff",
]


[tool.hatch.envs.dev.scripts]
lint = "ruff format ."
check = "ruff check --fix"
